--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       DB_NAME: ${POSTGRES_DB}
       DB_HOST: permission-db
       DB_PORT: ${DB_PORT}
+    networks:
+      - snippet_network
+      - permission_network
 
   db:
     container_name: 'permission-db'
@@ -24,6 +27,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    networks:
+      - permission_network
 
     volumes:
       - pgdata:/var/lib/postgresql/data
@@ -31,3 +36,9 @@ services:
 
 volumes:
   pgdata:
+
+networks:
+  permission_network:
+    driver: bridge
+  snippet_network:
+    external: true
